--- a/public/500.html
+++ b/public/500.html
@@ -17,7 +17,10 @@
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KGZ8MVM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
   </div>
